# Notcraft

./: .gitignore  Cargo.toml  IDEAS.md  LICENSE  README.md  build.rs  rustfmt.toml
mesher/: Cargo.toml
mesher/src/: lib.rs
notcraft/: Cargo.toml
notcraft-client/: Cargo.toml
notcraft-client/src/: audio_pool.rs  main.rs  total_float.rs
notcraft-client/src/client/: audio.rs  camera.rs  debug.rs  input.rs  loader.rs  mod.rs
notcraft-client/src/client/render/: mod.rs  renderer.rs
notcraft-client/src/client/render/mesher/: generation.rs  mod.rs  tracker.rs
notcraft-common/: Cargo.toml
notcraft-common/src/: aabb.rs  debug.rs  lib.rs  physics.rs  transform.rs  util.rs
notcraft-common/src/codec/: decode.rs  encode.rs  mod.rs
notcraft-common/src/net/: mod.rs
notcraft-common/src/net/packet/: mod.rs
notcraft-common/src/world/: chunk.rs  generation.rs  lighting.rs  mod.rs  orphan.rs  persistence.rs  registry.rs
notcraft-common/src/world/generation/: mod.rs  spline.rs
notcraft-graphics/: Cargo.toml
notcraft-graphics/examples/: triangle.rs
notcraft-graphics/src/: buffer.rs  context.rs  draw.rs  error.rs  layout.rs  lib.rs  texture.rs  texture_array.rs  vertex_array.rs
notcraft-graphics/src/program/: mod.rs  program.rs  shader.rs  uniform.rs
notcraft/src/: handle.rs  loader.rs  main.rs  util.rs
notcraft/src/client/: audio.rs  camera.rs  input.rs  loader.rs  mod.rs
notcraft/src/client/render/: mod.rs  renderer.rs
notcraft/src/client/render/mesher/: generation.rs  mod.rs  tracker.rs
notcraft/src/common/: aabb.rs  mod.rs  physics.rs  util.rs
notcraft/src/common/world/: chunk.rs  generation.rs  mod.rs  registry.rs
notcraft/src/core/: mod.rs
notcraft/src/engine/: audio.rs  camera.rs  input.rs  job.rs  loader.rs  mod.rs  physics.rs  transform.rs
notcraft/src/engine/audio/: audio_system.rs  mod.rs
notcraft/src/engine/components/: input.rs  mod.rs  physics.rs  transform.rs  world.rs
notcraft/src/engine/render/: camera.rs  debug.rs  mesh.rs  mesher.rs  mod.rs  renderer.rs  terrain.rs  ui.rs
notcraft/src/engine/resources/: mod.rs
notcraft/src/engine/systems/: input.rs  mod.rs  physics.rs  player_controller.rs
notcraft/src/engine/world/: chunk.rs  gen.rs  generation.rs  mod.rs  registry.rs
notcraft/src/engine/world/block/: mod.rs  registry.rs
resources/: blocks.json  debug.fs  debug.vs  terrain.fs  terrain.vs
resources/audio/: credits.md  manifest.ron  manifest.toml
resources/shaders/: adjustables.glsl  compose.fs  compose.vs  crosshair.glsl  debug.frag  debug.fs  debug.glsl  debug.vert  fullscreen_quad.vert  manifest.json  noise.glsl  post.glsl  simple.glsl  simple_texture.fs  simple_texture.vs  sky.glsl  terrain.fs  terrain.vs  util.glsl  water.frag  water.fs  water.vert
resources/shaders/compose/: compose.frag  compose.vert
resources/shaders/debug/: debug.frag  debug.vert
resources/shaders/post/: post.frag  post.vert
resources/shaders/simple/: terrain.frag  terrain.vert
resources/shaders/sky/: sky.frag  sky.vert
resources/shaders/ssao/: ao.frag
resources/shaders/terrain/: main.glsl  terrain.frag  terrain.vert  unpack.glsl  wind.glsl
source_textures/blocks/: detail_medium_grass.xcf  detail_short_grass.xcf  dirt.xcf  grass.xcf  grass_side.xcf  sand.xcf  stone.xcf  unknown.xcf  water.xcf
src/: application.rs  chunk_manager.rs  debug.rs  handle.rs  local_assets.rs  main.rs  obj.rs  util.rs
src/engine/: block.rs  camera.rs  chunk.rs  chunk_manager.rs  job.rs  mesh.rs  mesher.rs  mod.rs  old_world.rs  terrain.rs  world.rs
src/engine/components/: input.rs  mod.rs  physics.rs  transform.rs  world.rs
src/engine/mesher/: mod.rs
src/engine/render/: debug.rs  mesh.rs  mesher.rs  mod.rs  terrain.rs  ui.rs
src/engine/resources/: config.rs  mod.rs
src/engine/systems/: debug_render.rs  input.rs  input_handler.rs  mesher.rs  mod.rs  physics.rs  player_controller.rs  terrain_gen.rs  window_info.rs
src/engine/world/: block.rs  chunk.rs  gen.rs  mod.rs
src/gl_api/: buffer.rs  context.rs  draw.rs  error.rs  framebuffer.rs  layout.rs  limits.rs  misc.rs  mod.rs  objects.rs  texture.rs  texture_array.rs  uniform.rs  vertex_array.rs
src/gl_api/shader/: mod.rs  program.rs  shader.rs  uniform.rs
