[package]
name = "noisy"
version = "0.1.0"
authors = ["XavilPergis <max.duzen@gmail.com>"]

[dependencies]
gl = "0.10.0"
image = "0.18.0"
lazy_static = "1.0.0"
cgmath = "0.16.1"
smallvec = "0.6.0"
noise = "0.5.1"
collision = "0.15.1"
rayon = "1.0.1"

[target.'cfg(windows)'.dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

[target.'cfg(not(windows))'.dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
