[package]
name = "noisy"
version = "0.1.0"
authors = ["XavilPergis <max.duzen@gmail.com>"]
build = "build.rs"

[dependencies]
gl = "0.10.0"
image = "0.19.0"
lazy_static = "1.1.0"
cgmath = "0.16.1"
smallvec = "0.6.5"
noise = "0.5.1"
collision = "0.18.0"
rayon = "1.0.2"
smallbitvec = "2.1.1"
shrev = "1.0.1"
rand = "0.5.5"
flame = "0.2.2"
ndarray = "0.12.0"

[dependencies.specs]
version = "0.12.1"
features = ["nightly"]

[dependencies.glfw]
git = "https://github.com/bjz/glfw-rs.git"
default-features = false

# [target.'cfg(windows)'.dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"
# default-features = false

# [target.'cfg(not(windows))'.dependencies.glfw]
# git = "https://github.com/bjz/glfw-rs.git"
