[package]
name = "notcraft"
version = "0.1.0"
authors = ["XavilPergis <max.duzen@gmail.com>"]

[profile.release]
debug = true

[dependencies]
gl = "0.10.0"
image = "0.19.0"
lazy_static = "1.1.0"
cgmath = "0.16.1"
smallvec = "0.6.5"
noise = "0.5.1"
collision = "0.18.0"
rayon = "1.0.2"
smallbitvec = "2.1.1"
shrev = "1.0.1"
rand = "0.6.0"
flame = "0.2.2"
ndarray = "0.12.0"
new-ordered-float = "1.0.2"
glutin = "0.18.0"
specs-derive = "0.2.0"
shred-derive = "0.5.0"
log = "0.4.6"
simple_logger = "1.0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
crossbeam = "0.5.0"
rodio = "0.8.1"

[dependencies.specs]
version = "0.12.1"
features = ["nightly"]
