[package]
name = "notcraft"
version = "0.1.0"
authors = ["Avi <max.duzen@gmail.com>"]
edition = "2021"
license = "AGPL-3.0"

[features]
default = ["debug"]
hot-reload = ["notify", "notcraft-common/hot-reload"]
debug = ["hot-reload", "notcraft-common/debug"]

[dependencies.notcraft-common]
version = "0.1.0"
path = "../notcraft-common"

[dependencies]
lazy_static = "1.3"
log = "0.4"
env_logger = "0.9.0"
num-traits = "0.2"
anyhow = "1.0.51"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ron = "0.7.0"
toml = "0.5.8"

flurry = "0.3.1"
structopt = "0.3.25"
noise = "0.7.0"
rayon = "1.0.3"
crossbeam-channel = "0.5"
image = "0.21"
ambisonic = "0.4.0"
rand = "0.6"
nalgebra = "0.29.0"
approx = "0.5.0"
glob = "0.3.0"

glium = "0.30.2"
bevy_core = "0.5.0"
bevy_ecs = "0.5.0"
bevy_app = "0.5.0"

notify = { version = "5.0.0-pre.13", optional = true }

# NOTE: the `send_guard` feature is important because we use raw rwlocks in chunk management code,
# where it is very possible that locked chunks get send across thread boundaries, such that a raw
# unlock happens on a different thread than the raw lock.
parking_lot = { version = "0.11.2", features = ["send_guard"] }
