[package]
name = "notcraft-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
hot-reload = ["notify"]

[profile.dev]
opt-level = 1

[dependencies]
lazy_static = "1.3"
log = "0.4"
num-traits = "0.2"
anyhow = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
flurry = "0.3"
noise = "0.7"
rayon = "1.0"
crossbeam-channel = "0.5"
rand = "0.6"
nalgebra = "0.29.0"
approx = "0.5"

bevy_core = "0.5"
bevy_ecs = "0.5"
bevy_app = "0.5"

arc-swap = "1.5"
notify = { version = "5.0.0-pre.13", optional = true }

# NOTE: the `send_guard` feature is important because we use raw rwlocks in chunk management code,
# where it is very possible that locked chunks get send across thread boundaries, such that a raw
# unlock happens on a different thread than the raw lock.
parking_lot = { version = "0.11", features = ["send_guard"] }
