[package]
name = "notcraft"
version = "0.1.0"
authors = ["XavilPergis <max.duzen@gmail.com>"]
edition = "2018"
license = "AGPL-3.0"

[profile.release]
debug = true

[dependencies]
lazy_static = "1.3"
log = "0.4"
simple_logger = "1.0"
smallvec = "0.6"
# new-ordered-float = "1.0"
num-traits = "0.2"

serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

noise = "0.5"
rayon = "1.0"
shrev = "1.0"
# shred-derive = "0.6"
crossbeam = "0.7"
image = "0.21"
rodio = "0.8"
rand = "0.6"
nalgebra = "0.18"

glium = "0.24"

[dependencies.specs]
version = "0.14"
features = ["nightly"]
